# crypto_exam

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  README.md  details.txt  docker-compose.yml  package-lock.json  package.json  render.yaml  tsconfig.base.json
public/backend/: Dockerfile  Dockerfile.render  pyproject.toml  requirements.txt
public/backend/app/: __init__.py  config.py  database.py  main.py  websocket_manager.py
public/backend/app/agents/: __init__.py  balancer.py  generator.py  prompts.py
public/backend/app/api/routes/: generation.py
public/backend/app/api/v1/: admin.py  auth.py  complaint.py  crypto.py  delivery.py  enroll.py  exams.py  provisioning.py  question_modes.py  staff_reg.py  sys_ledger.py  websockets.py
public/backend/app/models/: __init__.py
public/backend/app/schemas/: __init__.py
public/backend/app/services/: auth.py  blockchain.py  broadcast_service.py  exam_lifecycle.py  seeder.py  sms.py
public/backend/app/services/biometric/: __init__.py  face_service.py  fingerprint_service.py
public/backend/app/services/crypto/: nitro_enclave.py  shamir_sss.py
public/backend/app/services/emergency/: __init__.py
public/backend/app/services/pdf_ingestion/: __init__.py  parser.py
public/backend/app/services/question_modes/: __init__.py  answer_key_crypto.py  mode1_ai_made.py  (+1 more)
public/backend/app/tasks/: generation.py
public/backend/crypto/: __init__.py  question_sealing.py  shamir.py
public/backend/engine/: __init__.py
public/backend/migrations/: init.sql
public/backend/tests/: __init__.py  test_merkle.py
(+469 files in other folders)
