[project]
name = "cryptoexam-backend"
version = "0.1.0"
description = "CryptoExam Core — Zero-Trust Examination Infrastructure Backend"
requires-python = ">=3.12"
dependencies = [
    # ── Core Framework ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # ── Database ──
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # ── Cache & Task Queue ──
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",

    # ── Auth & Security ──
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.0.0",
    "cryptography>=42.0.0",

    # ── Cryptography (Core) ──
    "pycryptodome>=3.20.0",
    "gmpy2>=2.1.5",
    "secretsharing>=0.3.0",

    # ── Blockchain ──
    "web3>=6.15.0",

    # ── HTTP & Networking ──
    "httpx>=0.27.0",

    # ── Validation & Config ──
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # ── AI / LLM ──
    "openai>=1.30.0",
    "instructor>=1.3.0",
    "sentence-transformers>=3.0.0",

    # ── IPFS ──
    "ipfshttpclient>=0.8.0",

    # ── Utilities ──
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
